--- a/android-app/.gitignore
+++ b/android-app/.gitignore
@@ -1,1 +1,28 @@
+# ======================
+# Android / Gradle
+# ======================
+.gradle/
+build/
+*/build/
+
+# ======================
+# Local config
+# ======================
 local.properties
+
+# ======================
+# Kotlin / Java
+# ======================
+*.class
+
+# ======================
+# Logs
+# ======================
+*.log
+
+# ======================
+# OS
+# ======================
+.DS_Store
+Thumbs.db
+
